# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  03 May 2005; Roy Marples <uberlord@gentoo.org>:

    changed default indentation to 2 spaces to match rcscripts in functions.sh

    wpa_supplicant now stops wpa_cli before wpa_supplicant to fix a potential
    future error

  02 May 2005; Roy Marples <uberlord@gentoo.org>:

    Fix user function hooks for echoing to stdout and protecting our vars

  30 Apr 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not create the udev devices.tar.bz2 if we do not have write permissions
    for /.  Request by Donnie (spyderous) for boxes with / on NFS.

  30 Apr 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fixor column/color logic for when used in portage.

  29 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Move crypto-loop to util-linux and skel bash files to bash.

  28 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Export the 'service name' for init scripts #86348.

  28 Apr 2005; Martin Schlemmer <azarah@gentoo.org>:

    If no /etc/modules.conf exist, do not 'touch' it, but create a new
    file with the 'modules-update header' in it to get modules-update
    to do the right thing (regen), and not just quit (init.d/modules).

  27 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Ignore trailing comments in module files #88553.

  26 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Sync special var's with portage's env-update.sh and ours #88819.

  26 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant now supports wpa_supplicant-0.4.0

    iwconfig downs and ups the interface after a scan

  25 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    iproute2 now handles mtu the same way as ifconfig - fixes #90242

    net.lo no longer errors when using postdown and postup functions

  22 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    Address network routes now get metrics applied as well